// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button screenshot disabled 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.button {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 0;
    outline: none;
}
    .button:focus-visible .button__shape {
        box-shadow: var(--shdw-el-focused);
    }
    .button__shape {
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 0.1s ease-out, color 0.15s linear;
        color: var(--clr-el-gray-080);
        border-radius: var(--button-border-radius);
    }
    .button_rounded .button__shape {
        border-radius: calc(
            (
                    var(--button-mode-text-vertical-padding) * 2 + var(--button-line-height) +
                        var(--button-text-padding-bottom)
                ) / 2
        );
    }
    .button:active .button__shape {
        transition: none;
        transform: scale(0.96);
    }
    .button:disabled .button__shape,
    .button:disabled:hover .button__shape {
        transform: scale(1);
        background-color: var(--clr-el-gray-020);
        color: var(--clr-el-gray-050);
        cursor: default;
    }
    .button_mode_icon .button__shape {
            padding: var(--button-mode-icon-padding);
        }
    .button_mode_text .button__shape {
            padding: var(--button-mode-text-padding);
        }
    .button_with-left-icon .button__shape {
        padding-left: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_with-right-icon .button__shape {
        padding-right: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_size_s32 {
            --button-border-radius: 10px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-vertical-padding: 5px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-12);
            --button-mode-text-with-icon-horizontal-padding: var(--space-8);
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-8);
        }
    .button_size_s36 {
            --button-border-radius: 12px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-padding: var(--space-8) var(--space-16);
            --button-mode-text-with-icon-horizontal-padding: var(--space-12);
            --button-text-padding-bottom: 0;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s44 {
            --button-border-radius: 14px;
            --button-font-size: 16px;
            --button-line-height: 24px;

            --button-mode-text-vertical-padding: 10px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: 0px;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s56 {
            --button-border-radius: 14px;
            --button-font-size: 20px;
            --button-line-height: 28px;

            --button-mode-text-vertical-padding: 13px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-16);
        }
    .button_view_contrast .button__shape {
            background-color: var(--clr-bg-gray-1);
        }
    .button_view_contrast .button__shape:hover {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_contrast .button__shape:active {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_shade .button__shape {
            background-color: var(--clr-el-gray-020);
        }
    .button_view_shade .button__shape:hover {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_shade .button__shape:active {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_primary .button__shape {
            background-color: var(--clr-el-yellow-100);
        }
    .button_view_primary .button__shape:hover {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_primary .button__shape:active {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_contour .button__shape {
            box-shadow: inset 0 0 0 1px var(--clr-el-gray-030);
        }
    .button_view_contour .button__shape:hover {
                box-shadow: inset 0 0 0 1px var(--clr-el-gray-040);
            }
    .button_width_max {
            width: 100%;
        }
    .button_width_auto {
            width: auto;
            max-width: max-content;
        }
    .button_with-left-icon .button__text {
        margin-left: 8px;
    }
    .button_with-right-icon .button__text {
        margin-right: 8px;
    }
    .button__text {
        font-weight: 400;
        text-align: center;
        white-space: nowrap;
        user-select: none;
        font-size: var(--button-font-size);
        line-height: var(--button-line-height);
        padding-bottom: var(--button-text-padding-bottom);
    }
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_text button_with-left-icon\\" disabled=\\"\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg><span class=\\"button__text\\">Button</span></div></button>"
`;

exports[`Button screenshot icon 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.button {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 0;
    outline: none;
}
    .button:focus-visible .button__shape {
        box-shadow: var(--shdw-el-focused);
    }
    .button__shape {
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 0.1s ease-out, color 0.15s linear;
        color: var(--clr-el-gray-080);
        border-radius: var(--button-border-radius);
    }
    .button_rounded .button__shape {
        border-radius: calc(
            (
                    var(--button-mode-text-vertical-padding) * 2 + var(--button-line-height) +
                        var(--button-text-padding-bottom)
                ) / 2
        );
    }
    .button:active .button__shape {
        transition: none;
        transform: scale(0.96);
    }
    .button:disabled .button__shape,
    .button:disabled:hover .button__shape {
        transform: scale(1);
        background-color: var(--clr-el-gray-020);
        color: var(--clr-el-gray-050);
        cursor: default;
    }
    .button_mode_icon .button__shape {
            padding: var(--button-mode-icon-padding);
        }
    .button_mode_text .button__shape {
            padding: var(--button-mode-text-padding);
        }
    .button_with-left-icon .button__shape {
        padding-left: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_with-right-icon .button__shape {
        padding-right: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_size_s32 {
            --button-border-radius: 10px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-vertical-padding: 5px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-12);
            --button-mode-text-with-icon-horizontal-padding: var(--space-8);
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-8);
        }
    .button_size_s36 {
            --button-border-radius: 12px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-padding: var(--space-8) var(--space-16);
            --button-mode-text-with-icon-horizontal-padding: var(--space-12);
            --button-text-padding-bottom: 0;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s44 {
            --button-border-radius: 14px;
            --button-font-size: 16px;
            --button-line-height: 24px;

            --button-mode-text-vertical-padding: 10px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: 0px;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s56 {
            --button-border-radius: 14px;
            --button-font-size: 20px;
            --button-line-height: 28px;

            --button-mode-text-vertical-padding: 13px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-16);
        }
    .button_view_contrast .button__shape {
            background-color: var(--clr-bg-gray-1);
        }
    .button_view_contrast .button__shape:hover {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_contrast .button__shape:active {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_shade .button__shape {
            background-color: var(--clr-el-gray-020);
        }
    .button_view_shade .button__shape:hover {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_shade .button__shape:active {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_primary .button__shape {
            background-color: var(--clr-el-yellow-100);
        }
    .button_view_primary .button__shape:hover {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_primary .button__shape:active {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_contour .button__shape {
            box-shadow: inset 0 0 0 1px var(--clr-el-gray-030);
        }
    .button_view_contour .button__shape:hover {
                box-shadow: inset 0 0 0 1px var(--clr-el-gray-040);
            }
    .button_width_max {
            width: 100%;
        }
    .button_width_auto {
            width: auto;
            max-width: max-content;
        }
    .button_with-left-icon .button__text {
        margin-left: 8px;
    }
    .button_with-right-icon .button__text {
        margin-right: 8px;
    }
    .button__text {
        font-weight: 400;
        text-align: center;
        white-space: nowrap;
        user-select: none;
        font-size: var(--button-font-size);
        line-height: var(--button-line-height);
        padding-bottom: var(--button-text-padding-bottom);
    }
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div class=\\"multi-story\\"><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_icon\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_icon\\"><div class=\\"button__shape\\"><svg width=\\"24px\\" fill=\\"currentColor\\" height=\\"24px\\" viewBox=\\"0 0 24 24\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M11.6151 2C11.2576 2 10.9498 2.25234 10.8797 2.60291L10.7373 3.31473C10.6504 3.74916 10.3759 4.12296 9.98744 4.33591L9.68719 4.50049C7.94585 5.29358 6.67166 6.95729 6.44809 8.96942L5.90764 13.8335C5.80701 14.7391 5.3445 15.5656 4.62525 16.125L4.27154 16.4001C3.80269 16.7648 3.59318 17.3717 3.73723 17.9479L3.75025 18C3.89717 18.5877 4.42523 19 5.03102 19H9.00024C9.00024 20.6569 10.3434 22 12.0002 22C13.6571 22 15.0002 20.6569 15.0002 19H18.9695C19.5753 19 20.1033 18.5877 20.2502 18L20.2633 17.9479C20.4073 17.3717 20.1978 16.7648 19.729 16.4001L19.3752 16.125C18.656 15.5656 18.1935 14.7391 18.0929 13.8335L17.5524 8.96942C17.3288 6.95729 16.0547 5.29357 14.3133 4.50049L14.0131 4.33591C13.6246 4.12296 13.3501 3.74916 13.2632 3.31473L13.1208 2.60291C13.0507 2.25234 12.7429 2 12.3854 2H11.6151ZM17.9001 17H14.8173C12.3127 17 12.1435 17 9.18323 17H6.1001C7.49927 16.15 7.77311 15.1536 7.89525 14.0544L8.43571 9.19028C8.63751 7.37405 10.1727 6 12.0001 6C13.8275 6 15.3627 7.37405 15.5645 9.19028L16.1049 14.0544C16.2271 15.1536 16.5049 16.15 17.9001 17Z\\"></path></svg></div></button></div></div></div></div></div>"
`;

exports[`Button screenshot rounded 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.button {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 0;
    outline: none;
}
    .button:focus-visible .button__shape {
        box-shadow: var(--shdw-el-focused);
    }
    .button__shape {
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 0.1s ease-out, color 0.15s linear;
        color: var(--clr-el-gray-080);
        border-radius: var(--button-border-radius);
    }
    .button_rounded .button__shape {
        border-radius: calc(
            (
                    var(--button-mode-text-vertical-padding) * 2 + var(--button-line-height) +
                        var(--button-text-padding-bottom)
                ) / 2
        );
    }
    .button:active .button__shape {
        transition: none;
        transform: scale(0.96);
    }
    .button:disabled .button__shape,
    .button:disabled:hover .button__shape {
        transform: scale(1);
        background-color: var(--clr-el-gray-020);
        color: var(--clr-el-gray-050);
        cursor: default;
    }
    .button_mode_icon .button__shape {
            padding: var(--button-mode-icon-padding);
        }
    .button_mode_text .button__shape {
            padding: var(--button-mode-text-padding);
        }
    .button_with-left-icon .button__shape {
        padding-left: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_with-right-icon .button__shape {
        padding-right: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_size_s32 {
            --button-border-radius: 10px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-vertical-padding: 5px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-12);
            --button-mode-text-with-icon-horizontal-padding: var(--space-8);
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-8);
        }
    .button_size_s36 {
            --button-border-radius: 12px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-padding: var(--space-8) var(--space-16);
            --button-mode-text-with-icon-horizontal-padding: var(--space-12);
            --button-text-padding-bottom: 0;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s44 {
            --button-border-radius: 14px;
            --button-font-size: 16px;
            --button-line-height: 24px;

            --button-mode-text-vertical-padding: 10px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: 0px;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s56 {
            --button-border-radius: 14px;
            --button-font-size: 20px;
            --button-line-height: 28px;

            --button-mode-text-vertical-padding: 13px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-16);
        }
    .button_view_contrast .button__shape {
            background-color: var(--clr-bg-gray-1);
        }
    .button_view_contrast .button__shape:hover {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_contrast .button__shape:active {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_shade .button__shape {
            background-color: var(--clr-el-gray-020);
        }
    .button_view_shade .button__shape:hover {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_shade .button__shape:active {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_primary .button__shape {
            background-color: var(--clr-el-yellow-100);
        }
    .button_view_primary .button__shape:hover {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_primary .button__shape:active {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_contour .button__shape {
            box-shadow: inset 0 0 0 1px var(--clr-el-gray-030);
        }
    .button_view_contour .button__shape:hover {
                box-shadow: inset 0 0 0 1px var(--clr-el-gray-040);
            }
    .button_width_max {
            width: 100%;
        }
    .button_width_auto {
            width: auto;
            max-width: max-content;
        }
    .button_with-left-icon .button__text {
        margin-left: 8px;
    }
    .button_with-right-icon .button__text {
        margin-right: 8px;
    }
    .button__text {
        font-weight: 400;
        text-align: center;
        white-space: nowrap;
        user-select: none;
        font-size: var(--button-font-size);
        line-height: var(--button-line-height);
        padding-bottom: var(--button-text-padding-bottom);
    }
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div class=\\"multi-story\\"><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s32</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_text button_with-left-icon button_rounded\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg><span class=\\"button__text\\">Button</span></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s44</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s44 button_view_shade button_mode_text button_with-left-icon button_rounded\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg><span class=\\"button__text\\">Button</span></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s56</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s56 button_view_shade button_mode_text button_with-left-icon button_rounded\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg><span class=\\"button__text\\">Button</span></div></button></div></div></div></div><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s32</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_icon button_rounded\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s44</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s44 button_view_shade button_mode_icon button_rounded\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s56</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s56 button_view_shade button_mode_icon button_rounded\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg></div></button></div></div></div></div></div>"
`;

exports[`Button screenshot size 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.button {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 0;
    outline: none;
}
    .button:focus-visible .button__shape {
        box-shadow: var(--shdw-el-focused);
    }
    .button__shape {
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 0.1s ease-out, color 0.15s linear;
        color: var(--clr-el-gray-080);
        border-radius: var(--button-border-radius);
    }
    .button_rounded .button__shape {
        border-radius: calc(
            (
                    var(--button-mode-text-vertical-padding) * 2 + var(--button-line-height) +
                        var(--button-text-padding-bottom)
                ) / 2
        );
    }
    .button:active .button__shape {
        transition: none;
        transform: scale(0.96);
    }
    .button:disabled .button__shape,
    .button:disabled:hover .button__shape {
        transform: scale(1);
        background-color: var(--clr-el-gray-020);
        color: var(--clr-el-gray-050);
        cursor: default;
    }
    .button_mode_icon .button__shape {
            padding: var(--button-mode-icon-padding);
        }
    .button_mode_text .button__shape {
            padding: var(--button-mode-text-padding);
        }
    .button_with-left-icon .button__shape {
        padding-left: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_with-right-icon .button__shape {
        padding-right: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_size_s32 {
            --button-border-radius: 10px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-vertical-padding: 5px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-12);
            --button-mode-text-with-icon-horizontal-padding: var(--space-8);
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-8);
        }
    .button_size_s36 {
            --button-border-radius: 12px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-padding: var(--space-8) var(--space-16);
            --button-mode-text-with-icon-horizontal-padding: var(--space-12);
            --button-text-padding-bottom: 0;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s44 {
            --button-border-radius: 14px;
            --button-font-size: 16px;
            --button-line-height: 24px;

            --button-mode-text-vertical-padding: 10px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: 0px;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s56 {
            --button-border-radius: 14px;
            --button-font-size: 20px;
            --button-line-height: 28px;

            --button-mode-text-vertical-padding: 13px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-16);
        }
    .button_view_contrast .button__shape {
            background-color: var(--clr-bg-gray-1);
        }
    .button_view_contrast .button__shape:hover {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_contrast .button__shape:active {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_shade .button__shape {
            background-color: var(--clr-el-gray-020);
        }
    .button_view_shade .button__shape:hover {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_shade .button__shape:active {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_primary .button__shape {
            background-color: var(--clr-el-yellow-100);
        }
    .button_view_primary .button__shape:hover {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_primary .button__shape:active {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_contour .button__shape {
            box-shadow: inset 0 0 0 1px var(--clr-el-gray-030);
        }
    .button_view_contour .button__shape:hover {
                box-shadow: inset 0 0 0 1px var(--clr-el-gray-040);
            }
    .button_width_max {
            width: 100%;
        }
    .button_width_auto {
            width: auto;
            max-width: max-content;
        }
    .button_with-left-icon .button__text {
        margin-left: 8px;
    }
    .button_with-right-icon .button__text {
        margin-right: 8px;
    }
    .button__text {
        font-weight: 400;
        text-align: center;
        white-space: nowrap;
        user-select: none;
        font-size: var(--button-font-size);
        line-height: var(--button-line-height);
        padding-bottom: var(--button-text-padding-bottom);
    }
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div class=\\"multi-story\\"><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s32</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_text button_with-left-icon\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg><span class=\\"button__text\\">Button</span></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s36</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s36 button_view_shade button_mode_text button_with-left-icon\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg><span class=\\"button__text\\">Button</span></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s44</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s44 button_view_shade button_mode_text button_with-left-icon\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg><span class=\\"button__text\\">Button</span></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s56</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s56 button_view_shade button_mode_text button_with-left-icon\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg><span class=\\"button__text\\">Button</span></div></button></div></div></div></div><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s32</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_text\\"><div class=\\"button__shape\\"><span class=\\"button__text\\">Button</span></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s36</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s36 button_view_shade button_mode_text\\"><div class=\\"button__shape\\"><span class=\\"button__text\\">Button</span></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s44</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s44 button_view_shade button_mode_text\\"><div class=\\"button__shape\\"><span class=\\"button__text\\">Button</span></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s56</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s56 button_view_shade button_mode_text\\"><div class=\\"button__shape\\"><span class=\\"button__text\\">Button</span></div></button></div></div></div></div></div>"
`;

exports[`Button screenshot text button with icons 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.button {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 0;
    outline: none;
}
    .button:focus-visible .button__shape {
        box-shadow: var(--shdw-el-focused);
    }
    .button__shape {
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 0.1s ease-out, color 0.15s linear;
        color: var(--clr-el-gray-080);
        border-radius: var(--button-border-radius);
    }
    .button_rounded .button__shape {
        border-radius: calc(
            (
                    var(--button-mode-text-vertical-padding) * 2 + var(--button-line-height) +
                        var(--button-text-padding-bottom)
                ) / 2
        );
    }
    .button:active .button__shape {
        transition: none;
        transform: scale(0.96);
    }
    .button:disabled .button__shape,
    .button:disabled:hover .button__shape {
        transform: scale(1);
        background-color: var(--clr-el-gray-020);
        color: var(--clr-el-gray-050);
        cursor: default;
    }
    .button_mode_icon .button__shape {
            padding: var(--button-mode-icon-padding);
        }
    .button_mode_text .button__shape {
            padding: var(--button-mode-text-padding);
        }
    .button_with-left-icon .button__shape {
        padding-left: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_with-right-icon .button__shape {
        padding-right: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_size_s32 {
            --button-border-radius: 10px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-vertical-padding: 5px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-12);
            --button-mode-text-with-icon-horizontal-padding: var(--space-8);
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-8);
        }
    .button_size_s36 {
            --button-border-radius: 12px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-padding: var(--space-8) var(--space-16);
            --button-mode-text-with-icon-horizontal-padding: var(--space-12);
            --button-text-padding-bottom: 0;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s44 {
            --button-border-radius: 14px;
            --button-font-size: 16px;
            --button-line-height: 24px;

            --button-mode-text-vertical-padding: 10px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: 0px;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s56 {
            --button-border-radius: 14px;
            --button-font-size: 20px;
            --button-line-height: 28px;

            --button-mode-text-vertical-padding: 13px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-16);
        }
    .button_view_contrast .button__shape {
            background-color: var(--clr-bg-gray-1);
        }
    .button_view_contrast .button__shape:hover {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_contrast .button__shape:active {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_shade .button__shape {
            background-color: var(--clr-el-gray-020);
        }
    .button_view_shade .button__shape:hover {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_shade .button__shape:active {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_primary .button__shape {
            background-color: var(--clr-el-yellow-100);
        }
    .button_view_primary .button__shape:hover {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_primary .button__shape:active {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_contour .button__shape {
            box-shadow: inset 0 0 0 1px var(--clr-el-gray-030);
        }
    .button_view_contour .button__shape:hover {
                box-shadow: inset 0 0 0 1px var(--clr-el-gray-040);
            }
    .button_width_max {
            width: 100%;
        }
    .button_width_auto {
            width: auto;
            max-width: max-content;
        }
    .button_with-left-icon .button__text {
        margin-left: 8px;
    }
    .button_with-right-icon .button__text {
        margin-right: 8px;
    }
    .button__text {
        font-weight: 400;
        text-align: center;
        white-space: nowrap;
        user-select: none;
        font-size: var(--button-font-size);
        line-height: var(--button-line-height);
        padding-bottom: var(--button-text-padding-bottom);
    }
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div class=\\"multi-story\\"><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_text button_with-left-icon\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg><span class=\\"button__text\\">Button</span></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_text button_with-left-icon\\"><div class=\\"button__shape\\"><svg width=\\"24px\\" fill=\\"currentColor\\" height=\\"24px\\" viewBox=\\"0 0 24 24\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M11.6151 2C11.2576 2 10.9498 2.25234 10.8797 2.60291L10.7373 3.31473C10.6504 3.74916 10.3759 4.12296 9.98744 4.33591L9.68719 4.50049C7.94585 5.29358 6.67166 6.95729 6.44809 8.96942L5.90764 13.8335C5.80701 14.7391 5.3445 15.5656 4.62525 16.125L4.27154 16.4001C3.80269 16.7648 3.59318 17.3717 3.73723 17.9479L3.75025 18C3.89717 18.5877 4.42523 19 5.03102 19H9.00024C9.00024 20.6569 10.3434 22 12.0002 22C13.6571 22 15.0002 20.6569 15.0002 19H18.9695C19.5753 19 20.1033 18.5877 20.2502 18L20.2633 17.9479C20.4073 17.3717 20.1978 16.7648 19.729 16.4001L19.3752 16.125C18.656 15.5656 18.1935 14.7391 18.0929 13.8335L17.5524 8.96942C17.3288 6.95729 16.0547 5.29357 14.3133 4.50049L14.0131 4.33591C13.6246 4.12296 13.3501 3.74916 13.2632 3.31473L13.1208 2.60291C13.0507 2.25234 12.7429 2 12.3854 2H11.6151ZM17.9001 17H14.8173C12.3127 17 12.1435 17 9.18323 17H6.1001C7.49927 16.15 7.77311 15.1536 7.89525 14.0544L8.43571 9.19028C8.63751 7.37405 10.1727 6 12.0001 6C13.8275 6 15.3627 7.37405 15.5645 9.19028L16.1049 14.0544C16.2271 15.1536 16.5049 16.15 17.9001 17Z\\"></path></svg><span class=\\"button__text\\">Button</span></div></button></div></div></div></div><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_text button_with-right-icon\\"><div class=\\"button__shape\\"><span class=\\"button__text\\">Button</span><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_text button_with-right-icon\\"><div class=\\"button__shape\\"><span class=\\"button__text\\">Button</span><svg width=\\"24px\\" fill=\\"currentColor\\" height=\\"24px\\" viewBox=\\"0 0 24 24\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M11.6151 2C11.2576 2 10.9498 2.25234 10.8797 2.60291L10.7373 3.31473C10.6504 3.74916 10.3759 4.12296 9.98744 4.33591L9.68719 4.50049C7.94585 5.29358 6.67166 6.95729 6.44809 8.96942L5.90764 13.8335C5.80701 14.7391 5.3445 15.5656 4.62525 16.125L4.27154 16.4001C3.80269 16.7648 3.59318 17.3717 3.73723 17.9479L3.75025 18C3.89717 18.5877 4.42523 19 5.03102 19H9.00024C9.00024 20.6569 10.3434 22 12.0002 22C13.6571 22 15.0002 20.6569 15.0002 19H18.9695C19.5753 19 20.1033 18.5877 20.2502 18L20.2633 17.9479C20.4073 17.3717 20.1978 16.7648 19.729 16.4001L19.3752 16.125C18.656 15.5656 18.1935 14.7391 18.0929 13.8335L17.5524 8.96942C17.3288 6.95729 16.0547 5.29357 14.3133 4.50049L14.0131 4.33591C13.6246 4.12296 13.3501 3.74916 13.2632 3.31473L13.1208 2.60291C13.0507 2.25234 12.7429 2 12.3854 2H11.6151ZM17.9001 17H14.8173C12.3127 17 12.1435 17 9.18323 17H6.1001C7.49927 16.15 7.77311 15.1536 7.89525 14.0544L8.43571 9.19028C8.63751 7.37405 10.1727 6 12.0001 6C13.8275 6 15.3627 7.37405 15.5645 9.19028L16.1049 14.0544C16.2271 15.1536 16.5049 16.15 17.9001 17Z\\"></path></svg></div></button></div></div></div></div></div>"
`;

exports[`Button screenshot view 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.button {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 0;
    outline: none;
}
    .button:focus-visible .button__shape {
        box-shadow: var(--shdw-el-focused);
    }
    .button__shape {
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 0.1s ease-out, color 0.15s linear;
        color: var(--clr-el-gray-080);
        border-radius: var(--button-border-radius);
    }
    .button_rounded .button__shape {
        border-radius: calc(
            (
                    var(--button-mode-text-vertical-padding) * 2 + var(--button-line-height) +
                        var(--button-text-padding-bottom)
                ) / 2
        );
    }
    .button:active .button__shape {
        transition: none;
        transform: scale(0.96);
    }
    .button:disabled .button__shape,
    .button:disabled:hover .button__shape {
        transform: scale(1);
        background-color: var(--clr-el-gray-020);
        color: var(--clr-el-gray-050);
        cursor: default;
    }
    .button_mode_icon .button__shape {
            padding: var(--button-mode-icon-padding);
        }
    .button_mode_text .button__shape {
            padding: var(--button-mode-text-padding);
        }
    .button_with-left-icon .button__shape {
        padding-left: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_with-right-icon .button__shape {
        padding-right: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_size_s32 {
            --button-border-radius: 10px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-vertical-padding: 5px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-12);
            --button-mode-text-with-icon-horizontal-padding: var(--space-8);
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-8);
        }
    .button_size_s36 {
            --button-border-radius: 12px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-padding: var(--space-8) var(--space-16);
            --button-mode-text-with-icon-horizontal-padding: var(--space-12);
            --button-text-padding-bottom: 0;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s44 {
            --button-border-radius: 14px;
            --button-font-size: 16px;
            --button-line-height: 24px;

            --button-mode-text-vertical-padding: 10px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: 0px;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s56 {
            --button-border-radius: 14px;
            --button-font-size: 20px;
            --button-line-height: 28px;

            --button-mode-text-vertical-padding: 13px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-16);
        }
    .button_view_contrast .button__shape {
            background-color: var(--clr-bg-gray-1);
        }
    .button_view_contrast .button__shape:hover {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_contrast .button__shape:active {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_shade .button__shape {
            background-color: var(--clr-el-gray-020);
        }
    .button_view_shade .button__shape:hover {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_shade .button__shape:active {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_primary .button__shape {
            background-color: var(--clr-el-yellow-100);
        }
    .button_view_primary .button__shape:hover {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_primary .button__shape:active {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_contour .button__shape {
            box-shadow: inset 0 0 0 1px var(--clr-el-gray-030);
        }
    .button_view_contour .button__shape:hover {
                box-shadow: inset 0 0 0 1px var(--clr-el-gray-040);
            }
    .button_width_max {
            width: 100%;
        }
    .button_width_auto {
            width: auto;
            max-width: max-content;
        }
    .button_with-left-icon .button__text {
        margin-left: 8px;
    }
    .button_with-right-icon .button__text {
        margin-right: 8px;
    }
    .button__text {
        font-weight: 400;
        text-align: center;
        white-space: nowrap;
        user-select: none;
        font-size: var(--button-font-size);
        line-height: var(--button-line-height);
        padding-bottom: var(--button-text-padding-bottom);
    }
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div class=\\"multi-story\\"><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">view: shade</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_text button_with-left-icon\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg><span class=\\"button__text\\">Button</span></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">view: contrast</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_contrast button_mode_text button_with-left-icon\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg><span class=\\"button__text\\">Button</span></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">view: primary</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_primary button_mode_text button_with-left-icon\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg><span class=\\"button__text\\">Button</span></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">view: contour</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_contour button_mode_text button_with-left-icon\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg><span class=\\"button__text\\">Button</span></div></button></div></div></div></div><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">view: shade</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_icon\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">view: contrast</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_contrast button_mode_icon\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">view: primary</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_primary button_mode_icon\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg></div></button></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">view: contour</div><div class=\\"multi-story__item-component\\"><button class=\\"button button_width_auto button_size_s32 button_view_contour button_mode_icon\\"><div class=\\"button__shape\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1C7.44772 1 7 1.44772 7 2V7H2C1.44772 7 1 7.44772 1 8C1 8.55229 1.44772 9 2 9H7V14C7 14.5523 7.44772 15 8 15C8.55229 15 9 14.5523 9 14V9H14C14.5523 9 15 8.55229 15 8C15 7.44772 14.5523 7 14 7H9V2C9 1.44772 8.55229 1 8 1Z\\"></path></svg></div></button></div></div></div></div></div>"
`;
